--- a/02-AD-transcriptomics-time-space.Rmd
+++ b/02-AD-transcriptomics-time-space.Rmd
@@ -115,33 +115,21 @@ se <- se[, !se$library_ID %in% c("lib390174", "lib390716")] # 390
 
 ```{r revise some sp info}
 index_ad03v01ls01 <-
-  which(colData(se)$subject == "AD_03" &
-        colData(se)$visit == "01" &
-        colData(se)$skin_type == "LS" &
-        colData(se)$replicate_ID == "01")
+  which(colData(se)$library_ID == "lib390797")
 colData(se)$skin_type[index_ad03v01ls01] <- "NL"
 
 index_ad03v01nl01 <-
-  which(colData(se)$subject == "AD_03" &
-          colData(se)$visit == "01" &
-          colData(se)$skin_type == "NL" &
-          colData(se)$replicate_ID == "01")
+  which(colData(se)$library_ID == "lib390169")
 colData(se)$skin_type[index_ad03v01nl01] <- "LS"
 
 index_ad13v03nl01 <-
-  which(colData(se)$subject == "AD_13" &
-        colData(se)$visit == "03" &
-        colData(se)$skin_type == "NL" &
-        colData(se)$replicate_ID == "01")
+  which(colData(se)$library_ID == "lib390877")
 colData(se)$visit[index_ad13v03nl01] <- "05"
 colData(se)$skin_type[index_ad13v03nl01] <- "LS"
 colData(se)$replicate_ID[index_ad13v03nl01] <- "02"
 
 index_ad13v05ls02 <-
-  which(colData(se)$subject == "AD_13" &
-        colData(se)$visit == "05" &
-        colData(se)$skin_type == "LS" &
-        colData(se)$replicate_ID == "02")
+  which(colData(se)$library_ID == "lib390170")
 colData(se)$visit[index_ad13v05ls02] <- "03"
 colData(se)$skin_type[index_ad13v05ls02] <- "NL"
 colData(se)$replicate_ID[index_ad13v05ls02] <- "01"
@@ -217,6 +205,81 @@ se_KRTAP_filt <-
 readr::write_rds(se, "data/se.rds")
 readr::write_rds(se_KRTAP_filt, "data/se_krtap_all24.rds")
 ```
+
+## Upload data to GEO
+
+```{r checksum files}
+md5sum <- 
+  readr::read_delim("data/geo/geo_md5sum.txt", delim = "  ", 
+                  col_names = c("md5sum", "file_name")) %>% 
+  mutate(file_name=file_name %>% str_remove("read/"),
+         lib_id = file_name %>% str_extract("lib\\d{1,}"))
+```
+
+```{r metadata for GEO}
+geo_metadata <- 
+  colData(se) %>% as_tibble() %>% 
+  mutate(title = paste(visit, subject, skin_type, replicate_ID,
+                       sep = "_"),
+         `source name` = "skin biopsy",
+         organism = "Homo sapians") %>% 
+  select(BAM_ID,
+         title, 
+         `source name`,
+         organism,
+         subject,
+         skin_type,
+         gender,
+         scorad,
+         easi_total_score,
+         visit, date_visit,
+         biopsy_area,
+         library_ID)
+
+geo_metadata_n <-
+  geo_metadata %>% 
+  # select(title, library_ID) %>%
+  left_join(md5sum, by = c("library_ID" = "lib_id")) %>% 
+  group_by(title) %>% nest() %>% 
+  mutate(raw_file = data %>% map("file_name"),
+         md5sum = data %>% map("md5sum"),
+         data = data %>% map(~ select(.x, -md5sum, -file_name))) %>% 
+  unnest(cols = data) %>% 
+  distinct()
+
+geo_metadata_n %>% 
+  openxlsx::write.xlsx("data/geo/geo_meta.xlsx")
+
+geo_md5sum <- 
+  geo_metadata_n %>% 
+  ungroup %>% 
+  unnest(cols = c(raw_file, md5sum)) %>% 
+  select(raw_file, md5sum)
+openxlsx::write.xlsx(geo_md5sum, "data/geo/geo_md5sum.xlsx")
+
+count_matrix <-
+  assay(se, 1) %>% as_tibble(rownames = "gene_name")
+colnames(count_matrix)[-1] <- geo_metadata$title
+readr::write_csv(count_matrix, "data/geo/count_matrix.csv")
+
+count_matrix_normalized <-
+  assay(se, 2) %>% as_tibble(rownames = "gene_name")
+colnames(count_matrix_normalized)[-1] <- geo_metadata$title
+readr::write_csv(count_matrix_normalized, "data/geo/count_matrix_normalized.csv")
+
+```
+
+```{r paired}
+geo_md5sum %>% 
+  select(raw_file) %>% 
+  mutate(raw_file = raw_file %>% str_remove("_(1|2).fastq.gz")) %>% 
+  distinct() %>% 
+  mutate(pair_1 = paste0(raw_file, "_1.fastq.gz"),
+         pair_2 = paste0(raw_file, "_2.fastq.gz")) %>% 
+  select(contains("pair")) %>% 
+  openxlsx::write.xlsx("data/geo/geo_paired.xlsx")
+```
+
 
 ## Baseline characteristics (Table S1 and Figure 1a)
 
